force-app/main/default/objects/sugati__Booking_Item__c/sugati__Booking_Item__c.object-meta.xml
<CustomObject>
    <label>Booking Item</label>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Booking Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>