force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Date__c</fullName>
    <formula>sugati__BI_Rate__r.sugati__RA_From_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Date</type>
</CustomField>