force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Opportunity_Stage__c</fullName>
    <formula>TEXT(sugati__BI_Supplier_Booking__r.sugati__SB_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>