force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Rate__c</fullName>
    <label>Rate</label>
    <referenceTo>sugati__RA_Rate__c</referenceTo>
    <relationshipLabel>Booking Items</relationshipLabel>
    <relationshipName>Booking_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>