force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Rate_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Rate_Status__c</fullName>
    <formula>TEXT(sugati__BI_Rate__r.sugati__RA_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Status</label>
    <type>Text</type>
</CustomField>