force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Items</relationshipName>
    <type>Lookup</type>
</CustomField>