force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Requested_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Requested_Date_Time__c</fullName>
    <label>Requested Date Time</label>
    <type>DateTime</type>
</CustomField>