force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Room_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Room_Booking_Status__c</fullName>
    <label>Room Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Provisionally Booked</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>On Waiting List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>