force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Room_Name__c</fullName>
    <formula>sugati__BI_Rate__r.sugati__RA_Room__r.sugati__S_R_Room_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Name</label>
    <type>Text</type>
</CustomField>