force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Room_Type__c</fullName>
    <formula>sugati__BI_Rate__r.sugati__RA_Room_Type__r.sugati__RT_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room Type</label>
    <type>Text</type>
</CustomField>