force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Booking Items</relationshipLabel>
    <relationshipName>Booking_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>