force-app/main/default/objects/sugati__Booking_Item__c/fields/sugati__BI_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__BI_Supplier_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Cost</label>
    <referenceTo>sugati__Supplier_Cost__c</referenceTo>
    <relationshipLabel>Booking Items</relationshipLabel>
    <relationshipName>Booking_Items</relationshipName>
    <type>Lookup</type>
</CustomField>